--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tag_animation
 description: Tag animation
 version: 0.0.1
-homepage: 
+homepage: https://github.com/lovekid1997/TagAnimation
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
