--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tag_animation
 description: Tag animation
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/lovekid1997/TagAnimation
 
 environment:
@@ -11,6 +11,7 @@ dependencies:
   collection: ^1.17.1
   flutter:
     sdk: flutter
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
