--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -1,17 +1,77 @@
-name: Auto Label PR
+name: Auto Label by Branch
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, edited]
 
 jobs:
-  label:
+  auto-label:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
+      issues: write
     steps:
-      - uses: actions/labeler@v5
+      - name: Auto Label PR
+        uses: actions/github-script@v6
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: '.github/labeler.yml'
-          sync-labels: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const branchName = context.payload.pull_request.head.ref;
+            const prTitle = context.payload.pull_request.title.toLowerCase();
+            const labels = [];
+            
+            // Dựa trên tên branch
+            if (branchName.includes('feature') || branchName.includes('feat')) {
+              labels.push('enhancement');
+            }
+            if (branchName.includes('fix') || branchName.includes('bug')) {
+              labels.push('bug');
+            }
+            if (branchName.includes('docs') || branchName.includes('doc')) {
+              labels.push('documentation');
+            }
+            if (branchName.includes('hotfix')) {
+              labels.push('hotfix');
+            }
+            
+            // Dựa trên title
+            if (prTitle.includes('wip') || prTitle.includes('draft')) {
+              labels.push('work in progress');
+            }
+            
+            // Label mặc định
+            if (labels.length === 0) {
+              labels.push('needs review');
+            } else {
+              labels.push('needs review');
+            }
+            
+            console.log(`Branch: ${branchName}`);
+            console.log(`Adding labels: ${labels.join(', ')}`);
+            
+            // Thêm labels (chỉ thêm nếu chưa có)
+            try {
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.pull_request.number,
+                labels: labels
+              });
+              console.log('Labels added successfully');
+            } catch (error) {
+              console.log('Error adding labels:', error.message);
+              // Thử từng label riêng lẻ
+              for (const label of labels) {
+                try {
+                  await github.rest.issues.addLabels({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: context.payload.pull_request.number,
+                    labels: [label]
+                  });
+                  console.log(`Added label: ${label}`);
+                } catch (e) {
+                  console.log(`Failed to add label ${label}:`, e.message);
+                }
+              }
+            }
