--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -30,9 +30,9 @@ jobs:
             console.log('Changed files:', files.map(f => f.filename));
             
             // Kiểm tra folder nào có thay đổi
-            const hasAdminChanges = files.some(file => file.startsWith('mmenu-admin/'));
-            const hasCdpChanges = files.some(file => file.startsWith('mmenu-cdp/'));
-            const hasApiChanges = files.some(file => file.startsWith('mmenu-api/'));
+            const hasAdminChanges = files.some(file => startsWith('mmenu-admin/', file));
+            const hasCdpChanges = files.some(file => startsWith('mmenu-cdp/', file));
+            const hasApiChanges = files.some(file => startsWith('mmenu-api/', file));
             
             console.log('Folder changes detected:', {
               admin: hasAdminChanges,
